# docs/swagger.json
@@ -457,6 +457,11 @@
     "definitions": {
         "handler.CreateProductRequest": {
             "type": "object",
+            "required": [
+                "category",
+                "manufacturer",
+                "product_name"
+            ],
             "properties": {
                 "category": {
                     "type": "string",
@@ -464,6 +469,7 @@
                 },
                 "count": {
                     "type": "integer",
+                    "minimum": 0,
                     "example": 50
                 },
                 "manufacturer": {
@@ -472,6 +478,7 @@
                 },
                 "price": {
                     "type": "integer",
+                    "minimum": 0,
                     "example": 1299
                 },
                 "product_name": {
@@ -503,22 +510,27 @@
             "properties": {
                 "category": {
                     "type": "string",
+                    "minLength": 1,
                     "example": "Инструменты"
                 },
                 "count": {
                     "type": "integer",
+                    "minimum": 0,
                     "example": 30
                 },
                 "manufacturer": {
                     "type": "string",
+                    "minLength": 1,
                     "example": "Зубр"
                 },
                 "price": {
                     "type": "integer",
+                    "minimum": 0,
                     "example": 1499
                 },
                 "product_name": {
                     "type": "string",
+                    "minLength": 1,
                     "example": "Молоток с резиновой ручкой"
                 }
             }
